<resources>
    <string name="app_name">S.A. Perfumes</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account? Register</string>
    <string name="skip"><![CDATA[Skip >>]]></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign In</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_orders">My Orders</string>
    <string name="my_account">My Account</string>
    <string name="search_hint">Search Product…</string>
    <string name="search">Search</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="reset_password">Reset Password</string>
    <string name="shop_now">Shop Now!</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="attar_description_dummy">1. 100% Pure Premium Quality Non Alcoholic Attar \n2. Create a real class which will make you distinct amongst many\n3. Made using premium quality ingredients, this attar is absolutely safe for your skin\n4. Enchanting and soothing, this fragrance is sure to impress everyone around you\n5. The enticing fragrance of this attar is highly long lasting which is a vital feature to keep you on the go\n6. Wear this attar to have a fine confidence all day long and fetch compliments for your choice of attar\n7. This attar will also be a wonderful gifting option for your loved ones.</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="add_new_address">Add new address</string>
    <string name="house_no_building_name">House No, Building Name*</string>
    <string name="road_name_area_colony">Road name, Area, Colony*</string>
    <string name="state">State*</string>
    <string name="city">City*</string>
    <string name="landmark_optional">Landmark (Optional)</string>
    <string name="name">Name*</string>
    <string name="_10_digit_mobile_number">10-digit Mobile number*</string>
    <string name="edit_address">Edit Address</string>
    <string name="pincode">Pincode*</string>
    <string name="please_enter_valid_name">Please enter valid name</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="please_enter_valid_house_no">Please enter valid house no, Building name</string>
    <string name="pincode_must_be_6_digits">Pincode must be 6 digits</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="invalid_city">Invalid city</string>
    <string name="invalid_state">Invalid state</string>
    <string name="please_enter_valid_road_name">Please enter valid Road name</string>
    <string name="price_details">Price Details</string>
    <string name="price_x_items">Price (%1$d Items)</string>
    <string name="free">Free</string>
    <string name="delivery">Delivery</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="continue_label">Continue</string>
    <string name="order_summary">Order Summary</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="change">Change</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="upi">UPI</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="checkout">Checkout</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="delivery_info">Delivery Info</string>
    <string name="delivery_by">Delivery By</string>
    <string name="updates_sent_to">Updates Sent to</string>
    <string name="thank_you">Thank You!</string>
    <string name="your_order_has_been_placed_and_is_being_processed">Your order has been placed and is being processed</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="order_id">Order Id :</string>
    <string name="order_date">Order date</string>
    <string name="delivery_date">Delivery date</string>
    <string name="order_details">Order Details</string>
</resources>
