<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="orderDetail"
            type="com.saperfumes.models.OrderDetailsItem" />
        <variable
            name="orderClickListener"
            type="com.saperfumes.account.orders.OrderAdapter.OrderClickListener" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:clipChildren="false">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:onClick="@{()->orderClickListener.onOrderClick(orderDetail.id)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView45"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/order_id"
                    android:textSize="16sp"
                    android:textColor="@color/textColorNormal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView46"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    tools:text="1"
                    android:text="@{orderDetail.id}"
                    android:textSize="16sp"
                    android:textColor="@color/textColorNormal"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView45"
                    app:layout_constraintStart_toEndOf="@+id/textView45" />

                <View
                    android:id="@+id/view7"
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/lightGray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView45" />

                <TextView
                    android:id="@+id/textView48"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/order_date"
                    android:textSize="16sp"
                    android:textColor="@color/textColorNormal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view7" />

                <TextView
                    android:id="@+id/textView49"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{orderDetail.orderDate}"
                    android:textColor="@color/textColorNormal"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView48"
                    app:layout_constraintStart_toEndOf="@+id/textView48"
                    tools:text="20 March 2020" />

                <TextView
                    android:id="@+id/textView50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/delivery_date"
                    android:textColor="@color/textColorNormal"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView48" />

                <TextView
                    android:id="@+id/textView51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{orderDetail.deliveryDate}"
                    android:textColor="@color/textColorNormal"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView50"
                    app:layout_constraintStart_toEndOf="@+id/textView50"
                    tools:text="20 March 2020" />

                <TextView
                    android:id="@+id/textView52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/payment_mode"
                    android:textColor="@color/textColorNormal"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view8" />

                <View
                    android:id="@+id/view8"
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/lightGray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView50" />

                <TextView
                    android:id="@+id/textView53"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="Credit Card"
                    android:text="@{orderDetail.paymentMode}"
                    android:textColor="@color/textColorNormal"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView52"
                    app:layout_constraintStart_toEndOf="@+id/textView52" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>